<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.ui.StudentSignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_blue"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/titleWhite"
        android:text="@string/create_student_account"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bwhite"
            android:hint="@string/username_email"
            android:inputType="textPersonName"
            android:textStyle="bold"
            android:textColor="@color/blue2"
            android:layout_marginBottom="10dp"
            android:imeOptions="actionNext"
            android:lines="1"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bwhite"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textStyle="bold"
            android:textColor="@color/blue2"
            android:layout_marginBottom="10dp"
            android:imeOptions="actionNext"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bwhite"
            android:hint="@string/password"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:textColor="@color/blue2"
            android:layout_marginBottom="15dp"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bwhite"
            android:hint="@string/confirm_password"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:textColor="@color/blue2"
            android:layout_marginBottom="15dp"
            android:padding="12dp" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_with_the_terms_and_conditions"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:onClick="xml_student_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sign_up"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@color/titleWhite"
            android:layout_marginBottom="10dp"
            android:padding="12dp" />
    </LinearLayout>

</LinearLayout>